# ElasticKnots

./: .gitignore  .gitmodules  CMakeLists.txt  ContactProblem.cc  ContactProblem.hh  LICENSE  PeriodicRodList.hh  README.md  SlidingProblem.cc  SlidingProblem.hh  SoftConstraint.hh  SparseMatricesUtilities.hh  environment.yml  setup.py
data/: 9_47-cubiclattice.txt  knotinfo_table.csv
python/: Demo-0-Test.ipynb  Demo-1-Simulation.ipynb  Demo-2A-Clustering.ipynb  Demo-2B-Analysis.ipynb  helpers.py  parametric_curves.py
python_bindings/: CMakeLists.txt  elastic_knots.cc
